fix: nav on mobile

--- a/app/scss/layout/_nav.scss
+++ b/app/scss/layout/_nav.scss
@@ -57,7 +57,7 @@
 
 @media screen and (max-width: 1200px) {
   .nav {
-    position: relative;
+    position: initial;
     height: auto;
   }
 
